--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div id="home" class="big-bg">
       <header class="page-header wrapper">
-        <h1><a href="index.html"> <img class="logo" src="../images/buckscoding.png" alt="Bucks Coding"></a></h1>
+        <h1><a href="index.html"> <img class="logo" src="buckscoding.png" alt="Bucks Coding"></a></h1>
         <nav>
           <ul class="main-nav">
             <!-- 나중에 링크 연결 -->
