--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/png" href="../images/bc_favicon.png">
+    <link rel="icon" type="image/png" href="images/bc_favicon.png">
   </head>
   <body>
     <div id="home" class="big-bg">
       <header class="page-header wrapper">
-        <h1><a href="index.html"> <img class="logo" src="buckscoding.png" alt="Bucks Coding"></a></h1>
+        <h1><a href="index.html"> <img class="logo" src="images/buckscoding.png" alt="Bucks Coding"></a></h1>
         <nav>
           <ul class="main-nav">
             <!-- 나중에 링크 연결 -->
