--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="ko" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Bucks Coding - Full Screen</title>
-    <meta name="description" content="풀 스크린 페이지의 예제">
+    <title>Bucks Coding</title>
+    <meta name="description" content="벅스코딩 buckscoding">
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/png" href="images/bc_favicon.png">
+    <link rel="icon" type="image/png" href="images/favicon-32x32.png">
   </head>
   <body>
     <div id="home" class="big-bg">
@@ -18,9 +18,9 @@
         <nav>
           <ul class="main-nav">
             <!-- 나중에 링크 연결 -->
-            <li><a href="curriculum.html">커리큘럼</a></li>
+            <li><a href="phase.html">커리큘럼</a></li>
             <li><a href="class.html">수업안내</a></li>
-            <li><a href="notification.html">공지사항</a></li>
+            <li><a href="noti.html">공지사항</a></li>
           </ul>
         </nav>
       </header>
@@ -28,7 +28,7 @@
       <div class="home-content wrapper">
         <h2 class="page-title">The buck stops here.</h2>
         <p>프로그래밍을 통해 아이들의 창의적이고 논리적인 생각을 키웁니다.</p>
-        <a class="button" href="curriculum.html">커리큘럼</a>
+        <a class="button" href="phase.html">커리큘럼</a>
       </div><!-- .home-content -->
     </div><!-- #home -->
   </body>
