--- a/noti.html
+++ b/noti.html
@@ -45,8 +45,8 @@
       <aside>
         <h3 class="sub-title">카테고리</h3>
         <ul class="sub-menu">
-          <li><a href="noti.html"></a>공지사항</li>
-          <li><a href="noti_schedule.html"></a>수업일정</li>
+          <li><a href="noti.html">공지사항</a></li>
+          <li><a href="noti_schedule.html">수업일정</a></li>
         </ul>
 
         <h3 class="sub-title">문의</h3>
