--- a/class_works.html
+++ b/class_works.html
@@ -70,9 +70,9 @@
       <aside>
         <h3 class="sub-title">카테고리</h3>
         <ul class="sub-menu">
-          <li><a href="class.html"></a>수업 안내</li>
-          <li><a href="class_bucks.html"></a>벅스코딩 소개</li>
-          <li><a href="class_works.html"></a>작품 사진</li>
+          <li><a href="class.html">수업 안내</a></li>
+          <li><a href="class_bucks.html">벅스코딩 소개</a></li>
+          <li><a href="class_works.html">작품 사진</a></li>
         </ul>
 
         <h3 class="sub-title">수업 일정</h3>
