--- a/noti.html
+++ b/noti.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Bucks Coding - notification</title>
-    <meta name="description" content="풀 스크린 페이지의 예제">
+    <meta name="description" content="공지사항 Notification">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSS -->
