--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <nav>
           <ul class="main-nav">
             <!-- 나중에 링크 연결 -->
+            <li><a href="class_bucks.html">벅스안내</a></li>
             <li><a href="phase.html">커리큘럼</a></li>
-            <li><a href="class.html">수업안내</a></li>
             <li><a href="noti.html">공지사항</a></li>
           </ul>
         </nav>
@@ -29,7 +29,7 @@
       <div class="home-content wrapper">
         <h2 class="page-title">The buck stops here.</h2>
         <p>프로그래밍을 통해 아이들의 창의적이고 논리적인 생각을 키웁니다.</p>
-        <a class="button" href="phase.html">커리큘럼</a>
+        <a href="class_bucks.html">벅스안내</a>
       </div><!-- .home-content -->
     </div><!-- #home -->
   </body>
