--- a/class_works.html
+++ b/class_works.html
@@ -19,8 +19,8 @@
         <nav>
           <ul class="main-nav">
             <!-- 나중에 링크 연결 -->
+            <li><a href="class_bucks.html">벅스안내</a></li>
             <li><a href="phase.html">커리큘럼</a></li>
-            <li><a href="class.html">수업안내</a></li>
             <li><a href="noti.html">공지사항</a></li>
           </ul>
         </nav>
@@ -70,8 +70,8 @@
       <aside>
         <h3 class="sub-title">카테고리</h3>
         <ul class="sub-menu">
-          <li><a href="class.html">수업 안내</a></li>
           <li><a href="class_bucks.html">벅스코딩 소개</a></li>
+          <li><a href="class.html">수업 안내</a></li>
           <li><a href="class_works.html">작품 사진</a></li>
         </ul>
 
