--- a/noti_schedule.html
+++ b/noti_schedule.html
@@ -19,8 +19,8 @@
         <nav>
           <ul class="main-nav">
             <!-- 나중에 링크 연결 -->
+            <li><a href="class_bucks.html">벅스안내</a></li>
             <li><a href="phase.html">커리큘럼</a></li>
-            <li><a href="class.html">수업안내</a></li>
             <li><a href="noti.html">공지사항</a></li>
           </ul>
         </nav>
@@ -40,7 +40,8 @@
         <img src="images/monthlyplan.png" alt="월간계획">
         <p>벅스코딩 수업 일정입니다. 주말(토,일)과 공휴일은 수업이 없으며 평일에만 수업이 있습니다.</p>
         <p>12월은 연말연시 연휴로 2주간 쉬겠습니다.</p>
-        <p>연말연시 연휴 기간은 2021년 12월 28(화) ~ 2022년 1월 10(월)까지입니다.</p>
+        <p>연말연시 연휴 기간은 2021년 12월 27(월) ~ 2022년 1월 10(월)까지입니다.</p>
+        <p>*-=* 1월 10일(월)은 수업 희망하시는 경우 수업합니다.*-=*</p>
       </article>
 
       <aside>
