--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="home-content wrapper">
         <h2 class="page-title">The buck stops here.</h2>
         <p>프로그래밍을 통해 아이들의 창의적이고 논리적인 생각을 키웁니다.</p>
-        <a href="class_bucks.html">벅스안내</a>
+        <a class="button" href="class_bucks.html">벅스안내</a>
       </div><!-- .home-content -->
     </div><!-- #home -->
   </body>
