--- a/phase.html
+++ b/phase.html
@@ -19,8 +19,8 @@
         <nav>
           <ul class="main-nav">
             <!-- 나중에 링크 연결 -->
+            <li><a href="class_bucks.html">벅스안내</a></li>
             <li><a href="phase.html">커리큘럼</a></li>
-            <li><a href="class.html">수업안내</a></li>
             <li><a href="noti.html">공지사항</a></li>
           </ul>
         </nav>
