--- a/class_bucks.html
+++ b/class_bucks.html
@@ -27,7 +27,7 @@
       </header>
 
       <div class="wrapper">
-        <h2 class="page-title">벅스</h2>
+        <h2 class="page-title">벅스안내</h2>
       </div><!-- /.wrapper -->
     </div><!-- #class -->
     <div class="class-contents wrapper">
